feat: Blacklist & UI audit
